[package]
name = "circuit"
version = "0.1.0"
authors = ["zmh"]
edition = "2024"
publish = false

[dependencies]
placeholder_project_name_placeholder_zk = { path = "../../monorepo/zk/plonky2" }
base64 = "0.21"
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"