[package]
name = "mempool"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
placeholder_project_name_placeholder_zk = { path = "../../zk/plonky2" }
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
bytes = "1.0.1"
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.14"
async-trait = "0.1.50"

circuit = { path = "../circuit" }
store = { path = "../store" }
network = { path = "../network" }

[dev-dependencies]
tokio-util = { version = "0.7.3", features= ["codec"] }
rand = "0.7.3"

[features]
benchmark = []
