[package]
name = "node"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
placeholder_project_name_placeholder_zk = { path = "../../monorepo/zk/plonky2" }
l0 = { path = "../../monorepo/l0" }
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
anyhow = "1.0.38"
base64 = "0.21"
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
crypto = { path = "../crypto" }
circuit = { path = "../circuit" }
store = { path = "../store" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
hex = "0.4.3"

[features]
benchmark = ["consensus/benchmark", "mempool/benchmark"]

[[bin]]         
name = "client"   
path = "src/client.rs" 
required-features = ["benchmark"] 
